examples/test/testpolicy5284.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5284
  namespace: namespace332
spec:
  podSelector:
    matchLabels:
      key30: value45
      key42: value4
      key36: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value17
          key2: value39
          key22: value46
      podSelector:
        matchLabels:
          key45: value32
          key14: value10
